cache immutable results